--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,3 +10,9 @@
   <body>
     <% include ./sidebar %>
     <div id="pusher">
+      <div class="ui inline nag">
+        <span class="title">
+          <%= nag %>
+        </span>
+        <i class="close icon"></i>
+      </div>
