--- a/views/partials/sidebar.ejs
+++ b/views/partials/sidebar.ejs
@@ -1,7 +1,7 @@
   <div class="ui wide sidebar inverted vertical menu">
     <div class="item">
       <h2 class="ui heading">
-        <a href="/">The Shelter Foundation</a>
+        <a href="/">Homeless Help</a>
       </h2>
     </div>
     
